--- a/hdt7/src/hdt7/Vista.form
+++ b/hdt7/src/hdt7/Vista.form
@@ -160,6 +160,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Traducir"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton3MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="720" y="580" width="-1" height="-1"/>
